--- a/test/console/install
+++ b/test/console/install
@@ -1,15 +1,3 @@
 #!/bin/bash
-rm -rf .git
-git init
-git add --all
-git commit -m "initial"
 
-heroku create -s cedar -b https://github.com/virtualstaticvoid/heroku-buildpack-r.git
-
-app=`heroku apps:info -s | grep ^name=`
-app=${app:5}
-
-git push heroku master
-
-# run R console
-heroku run "R --no-save" --app $app
+cf push rconsole -b https://github.com/malston/heroku-buildpack-r.git#cf-159
